plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    all {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot 기본 의존성
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JSON 처리
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // HTTP 클라이언트
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'

    // Redis 관련
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'io.lettuce:lettuce-core'
    implementation 'org.apache.commons:commons-pool2'

    // Resilience4j (Spring Boot 3 대응)
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0'
    implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.1.0'
    implementation 'io.github.resilience4j:resilience4j-timelimiter:2.1.0'
    implementation 'io.github.resilience4j:resilience4j-ratelimiter:2.1.0'


    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    // Database and migrations
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.postgresql:postgresql'

    // Temporal workflow orchestration
    implementation 'io.temporal:temporal-spring-boot-starter:1.35.0'

    // H2 Database (테스트용 인메모리 DB)
    runtimeOnly 'com.h2database:h2'
    testImplementation 'com.h2database:h2'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation 'io.temporal:temporal-testing:1.35.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('tossSandboxTest', Test) {
    useJUnitPlatform {
        includeTags 'toss-sandbox'
    }
    onlyIf {
        System.getenv('TOSS_CLIENT_KEY') && System.getenv('TOSS_SECRET_KEY')
    }
    shouldRunAfter test
}

layout.buildDirectory.set(file('build_sim'))
